@@ -1,4 +1,8 @@
-2005-08-19  Peter Bienstman  <Peter.Bienstman@UGent.be>
+2005-09-15  Peter Bienstman  <Peter.Bienstman@UGent.be>
+
+	* scatterer.cpp: Avoid uninitialised variable.
+
+2005-09-15  Peter Bienstman  <Peter.Bienstman@UGent.be>
 
 	* waveguide.h: Deregister waveguide after destruction.
 
